--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section id="sobre-a-loja" >
         <div class="container container-flex">
             <img src="./images/loja.jpg" alt="Imagem da loja ebac motors">
-            <div>
+            <div class="form-campo" >
                 <h2>Sobre a EBAC Motors</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni quae impedit qui nobis facilis? Odit molestiae ipsa, suscipit tenetur inventore iure excepturi vitae, qui temporibus dignissimos quam voluptatum, fuga et!
@@ -193,6 +193,60 @@
             </ul>
         </div>
     </section>
+
+    <section>
+        <div class="container">
+            <h2>Entre em contato</h2>
+            <form>
+                <div class="form-campo" >
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome">
+                </div>
+                <div class="form-campo" >
+                    <label for="telefone">Telefone:</label>
+                    <input type="tel" id="telefone">
+                </div>
+                <div class="form-campo" >
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email">
+                </div>
+                <div class="form-campo" >
+                    <label for="veiculo-interesse">Veículo de interesse:</label>
+                    <input type="text" id="veiculo-interesse">
+                </div>
+                <div class="form-campo" >
+                    <label for="mensagem">Mensagem:</label>
+                    <textarea id="mensagem"></textarea>
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container container-flex">
+        <p>
+            2024 &copy; EBAC Motors - Todos os direitos reservados
+        </p>
+        <ul class="container-flex" >
+            <li>
+                <a href="#">
+                    <img src="./icones/facebook.png" alt="facebook">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="./icones/instagram.png" alt="instagram">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="./icones/youtube.png" alt="youtube">
+                </a>
+            </li>
+        </ul>
+        </div>
+    </footer>
 
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
